--- a/package.json
+++ b/package.json
@@ -16,7 +16,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.14.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.14.5",
     "axios-mock-adapter": "^1.15.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "chai-enzyme": "^1.0.0-beta.1",
     "css-loader": "^2.1.1",
@@ -40,14 +51,13 @@
     "webpack-cli": "^3.3.7"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.14.5",
     "axios": "^0.18.0",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.2.2",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
     "express": "^4.14.0",
     "morgan": "^1.10.0",
     "react": "^16.8.6",
