--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "webpack",
-    "build:dev": "npm run build -- --watch --mode=development",
+    "build:dev": "npm run build -- --watch --mode=development --require babel-polyfill --require babel-register",
     "start": "node server/app.js",
     "start:dev": "npm run build:dev & npm run start-server",
     "start-server": "nodemon server/app.js -e html,js,scss --ignore public --ignore client"
