--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "client/index.js",
   "engines": {
-    "node": "14.x"
+    "node": "14.15.0"
   },
   "scripts": {
     "build": "webpack",
@@ -38,7 +38,6 @@
     "eslint-plugin-react": "^7.8.2",
     "jsdom": "^11.12.0",
     "mocha": "^5.2.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
@@ -60,11 +59,11 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.14.0",
+    "history": "^4.9.0",
+    "morgan": "^1.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.2.2",
-    "history": "^4.9.0",
-    "morgan": "^1.9.1"
+    "react-router-dom": "^4.2.2"
   }
 }
