--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "express": "^4.14.0",
     "history": "^4.9.0",
     "morgan": "^1.10.0",
+    "node": "^16.5.0",
+    "node-engine": "^0.0.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^4.3.1",
