--- a/package.json
+++ b/package.json
@@ -4,68 +4,52 @@
   "description": "",
   "main": "client/index.js",
   "engines": {
-    "node": "14.15.0"
+    "node": "14.x"
   },
   "scripts": {
     "build": "webpack",
     "build:dev": "npm run build -- --watch --mode=development --require babel-polyfill --require babel-register",
     "start": "node server/app.js",
     "start:dev": "npm run build:dev & npm run start-server",
-    "start-server": "nodemon server/app.js -e html,js,scss --ignore public --ignore client"
+    "start-server": "nodemon server/app.js -e html,js,scss --ignore public --ignore client",
+    "start:dev:logger": "LOGGING=true npm run start:dev"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.14.8",
+    "axios": "^0.21.1",
+    "compression": "^1.7.3",
+    "express": "^4.16.4",
+    "history": "^4.9.0",
+    "morgan": "^1.9.1",
+    "node": "^14.16.0",
+    "node-engine": "0.0.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "sequelize": "^6.3.5"
+  },
   "devDependencies": {
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
-    "axios-mock-adapter": "^1.15.0",
+    "axios-mock-adapter": "^1.19.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.2",
-    "chai-enzyme": "^1.0.0-beta.1",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.9.1",
-    "eslint": "^4.19.1",
-    "eslint-config-fullstack": "^5.0.0",
-    "eslint-plugin-react": "^7.8.2",
-    "jsdom": "^11.12.0",
-    "mocha": "^5.2.0",
-    "nodemon": "^2.0.3",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-mock-store": "^1.5.3",
-    "sinon": "^6.1.5",
-    "sinon-chai": "^3.5.0",
-    "style-loader": "^0.21.0",
-    "supertest": "^3.1.0",
-    "volleyball": "^1.5.1",
-    "wait-for-expect": "^3.0.2",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
-  },
-  "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/register": "^7.14.5",
-    "axios": "^0.18.0",
-    "babel-eslint": "^8.2.6",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "express": "^4.14.0",
-    "history": "^4.9.0",
-    "morgan": "^1.10.0",
-    "node": "^16.5.0",
-    "node-engine": "^0.0.5",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.2.2"
+    "css-loader": "^6.2.0",
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.24.0",
+    "nodemon": "^2.0.12",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2"
   }
 }
